--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.6",
     "@react-icons/all-files": "^4.1.0",
+    "date-fns": "^3.6.0",
     "next": "14.2.2",
     "react": "^18",
     "react-dom": "^18",
