--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.6",
     "@react-icons/all-files": "^4.1.0",
+    "@serwist/next": "^9.0.2",
+    "@serwist/precaching": "^9.0.2",
+    "@serwist/sw": "^9.0.2",
     "date-fns": "^3.6.0",
     "next": "14.2.2",
     "react": "^18",
