feat: logic login

--- a/.env
+++ b/.env
@@ -1,1 +1,4 @@
 URL_DOMAIN=https://localhost:3000
+URL_API=http://localhost:8000/api/
+NEXTAUTH_SECRET=asljeaoijrweoir9833hiasljweo
+NEXTAUTH_URL=http://localhost:3000/
