--- a/package.json
+++ b/package.json
@@ -10,14 +10,17 @@
   },
   "dependencies": {
     "@ducanh2912/next-pwa": "^10.2.6",
+    "@hookform/resolvers": "^3.6.0",
     "@react-icons/all-files": "^4.1.0",
     "@serwist/next": "^9.0.2",
     "@serwist/precaching": "^9.0.2",
     "@serwist/sw": "^9.0.2",
     "date-fns": "^3.6.0",
     "next": "14.2.2",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
+    "react-hook-form": "^7.52.0",
     "react-icons": "^5.1.0",
     "zustand": "^4.5.2"
   },
