--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@serwist/precaching": "^9.0.2",
     "@serwist/sw": "^9.0.2",
     "date-fns": "^3.6.0",
+    "midtrans-client": "^1.3.1",
     "next": "14.2.2",
     "next-auth": "^4.24.7",
     "react": "^18",
